--- a/payment-and-delivery.html
+++ b/payment-and-delivery.html
@@ -28,78 +28,85 @@
 
 
   <header class="header">
-    <div class="container header__top">
-  <div class="row align-items-center">
-    <div class="col-5">
-      <div class="row align-items-center">
-        <div class="col-auto">
-          <div class="dropdown">
-            <button class="btn-unstyled dropdown-toggle" type="button" id="showrooms" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <svg class="align-baseline" width="14" height="14" fill="currentColor" aria-hidden="true" focusable="false">
-                <use xlink:href="img/sprite.svg#map-mark"></use>
-              </svg>
-              Адреса шоурумов
+    <div class="header__top">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-sm col-auto">
+        <div class="row align-items-center">
+          <div class="col-auto d-block d-lg-none">
+            <button type="button" class="btn-unstyled mobile-menu-toggle">
+              <span class="mobile-menu-toggle__icon"></span>
             </button>
-            <div class="dropdown-menu fs-14" aria-labelledby="showrooms">
-              <a class="dropdown-item" href="/dnepr">Днепр</a>
-              <a class="dropdown-item" href="/kyiv">Киев</a>
-              <a class="dropdown-item" href="/kharkov">Харьков</a>
-              <a class="dropdown-item" href="/odessa">Одесса</a>
-              <a class="dropdown-item" href="/lviv">Львов</a>
-              <a class="dropdown-item" href="/showrooms">УКРАИНА</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <div class="dropdown">
+              <button class="btn-unstyled dropdown-toggle" type="button" id="showrooms" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <svg class="align-baseline" width="14" height="14" fill="currentColor" aria-hidden="true" focusable="false">
+                  <use xlink:href="img/sprite.svg#map-mark"></use>
+                </svg>
+                Адреса шоурумов
+              </button>
+              <div class="dropdown-menu fs-14" aria-labelledby="showrooms">
+                <a class="dropdown-item" href="/dnepr">Днепр</a>
+                <a class="dropdown-item" href="/kyiv">Киев</a>
+                <a class="dropdown-item" href="/kharkov">Харьков</a>
+                <a class="dropdown-item" href="/odessa">Одесса</a>
+                <a class="dropdown-item" href="/lviv">Львов</a>
+                <a class="dropdown-item" href="/showrooms">УКРАИНА</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <a href="/service-center">Сервисный центр</a>
+          <div class="col-auto d-none d-lg-block">
+            <a href="/service-center">Сервисный центр</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-2 text-center">
-      <a href="/">
-        <img src="//liberta.ua/img/svg/logo.svg" alt="Liberta logo">
-      </a>
-    </div>
-    <div class="col-5">
-      <div class="row align-items-center justify-content-end">
-        <div class="col-auto">
-          <div class="dropdown">
-            <a class="dropdown-toggle" href="tel:+380673265980" role="button" id="phones" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              +38(067) 326-59-80
-            </a>
-            <div class="dropdown-menu fs-14" aria-labelledby="phones">
-              <a class="dropdown-item" href="tel:+380501005980">+38(050) 100-59-80</a>
-              <a class="dropdown-item" href="tel:+380931701347">+38(093) 170-13-47</a>
-              <span class="d-block text-center fs-16">Отдел нестандартов:</span>
-              <a class="dropdown-item" href="tel:+380500155090">+38(050) 015 50 90</a>
-              <a class="dropdown-item" href="tel:+380970155090">+38(097) 015 50 90</a>
+      <div class="col-auto text-center">
+        <a href="/">
+          <img class="img-fluid header__logo" src="//liberta.ua/img/svg/logo.svg" alt="Liberta logo">
+        </a>
+      </div>
+      <div class="col">
+        <div class="row align-items-center justify-content-end">
+          <div class="col-auto d-none d-lg-block">
+            <div class="dropdown">
+              <a class="dropdown-toggle" href="tel:+380673265980" role="button" id="phones" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                +38(067) 326-59-80
+              </a>
+              <div class="dropdown-menu fs-14" aria-labelledby="phones">
+                <a class="dropdown-item" href="tel:+380501005980">+38(050) 100-59-80</a>
+                <a class="dropdown-item" href="tel:+380931701347">+38(093) 170-13-47</a>
+                <span class="d-block text-center fs-16">Отдел нестандартов:</span>
+                <a class="dropdown-item" href="tel:+380500155090">+38(050) 015 50 90</a>
+                <a class="dropdown-item" href="tel:+380970155090">+38(097) 015 50 90</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <form action="/search" le="search" class="search-form">
-            <button type="button" class="search-form__toggle btn-unstyled">
+          <div class="col-auto">
+            <form action="/search" le="search" class="search-form">
+              <button type="button" class="search-form__toggle btn-unstyled">
+                <svg width="24" height="24" fill="currentColor" aria-hidden="true" focusable="false">
+                  <use xlink:href="img/sprite.svg#search"></use>
+                </svg>
+              </button>
+              <input type="search" name="q" class="search-form__field" placeholder="Поиск по сайту" autocomplete="off" value="">
+            </form>
+          </div>
+          <div class="col-auto">
+            <!-- чтобы сделать ссылку неактивной - убираем href -->
+            <a class="cart-link" href="/cart">
               <svg width="24" height="24" fill="currentColor" aria-hidden="true" focusable="false">
-                <use xlink:href="img/sprite.svg#search"></use>
+                <use xlink:href="img/sprite.svg#cart"></use>
               </svg>
-            </button>
-            <input type="search" name="q" class="search-form__field" placeholder="Поиск по сайту" autocomplete="off" value="">
-          </form>
-        </div>
-        <div class="col-auto">
-          <!-- чтобы сделать ссылку неактивной - убираем href -->
-          <a class="cart-link" href="/cart">
-            <svg width="24" height="24" fill="currentColor" aria-hidden="true" focusable="false">
-              <use xlink:href="img/sprite.svg#cart"></use>
-            </svg>
-            <span id="cart-count" class="cart-link__count">1</span>
-          </a>
+              <span id="cart-count" class="cart-link__count">1</span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<nav class="main-nav">
+<nav class="main-nav d-none d-lg-block">
   <div class="container">
     <ul class="main-nav__list list-unstyled mb-0">
       <li>
@@ -120,11 +127,11 @@
 
   </header>
 
-  <main class="delivery">
+  <main class="delivery pt-30p pt-lg-0">
     <div class="container">
       <div class="row">
         <div class="col-xl-8 bg-white pb-60p">
-          <nav aria-label="breadcrumb">
+          <nav aria-label="breadcrumb" class="d-none d-lg-block">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="/">Главная</a></li>
               <li class="breadcrumb-item active" aria-current="page">Оплата и доставка – производство зеркал и стеклянных изделий Liberta</li>
@@ -135,9 +142,9 @@
           <section class="mt-40p">
             <h2>Способы доставки</h2>
             <div class="row align-items-center mb-20p">
-              <div class="col-12 col-md-6">
+              <div class="col-md-6 mb-3 mb-md-0">
                 <div class="row align-items-center">
-                  <div class="col-3 text-right">
+                  <div class="col-3 text-center">
                     <img class="img-fluid" src="//liberta.ua/img/delivery-method-1.png" alt="">
                   </div>
                   <div class="col-9">
@@ -145,10 +152,10 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-md-6">
+              <div class="col-md-6 mb-3 mb-md-0">
                 <div class="row align-items-center">
-                  <div class="col-3">
-                    <img class="img-" src="//liberta.ua/img/delivery-method-2.png" alt="">
+                  <div class="col-3 text-center">
+                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-2.png" alt="">
                   </div>
                   <div class="col-9">
                     <p class="mb-0">Доставка в грузовое отделение Курьерской Службы Доставки</p>
@@ -159,6 +166,18 @@
             <p class="bg-pink p-20p">
               <span class="text-secondary font-weight-bold">Внимание!</span> Перед получением, проверьте целостность продукции. Расписываясь в бланке приема при получении, вы соглашаетесь с тем, что товар поставлен в полном объеме и надлежащего качества.
             </p>
+            <div class="d-xl-none">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="h5 mt-30p">Бесплатная доставка</div>
+                  <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
+                </div>
+                <div class="col-md-6">
+                  <img class="img-fluid" src="//liberta.ua/img/delivery-free-delivery.png.pagespeed.ce.7pIj7G4CMu.png" alt="">
+                </div>
+              </div>
+              <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
+            </div>
           </section>
           <section class="mt-40p">
             <h2>Способы оплаты</h2>
@@ -170,13 +189,13 @@
           <section class="mt-40p">
             <h3 class="h2">Транспортная упаковка зеркал</h3>
             <p>Все товары компании Liberta поставляются в упаковке из трехшарового брендированого гофрокартона. Дополнительную защиту от повреждений при транспортировке зеркал обеспечивает пенопласт. Упаковка также оборудована ручкой для удобной и безопасной транспортировки. Благодаря этому вероятность повреждения зеркала минимальна. Тем не менее, при получении зеркала в службе доставки, обязательно убедитесь, что изделие не повреждено. Вскройте упаковку при получении и проверьте зеркало.</p>
-            <p class="font-weight-bold">
+            <div class="font-weight-bold d-flex align-items-center">
               <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
-              Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!
-            </p>
+              <p class="mb-0">Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!</p>
+            </div>
           </section>
         </div>
-        <div class="col-xl-4 bg-light fs-14 px-30p py-60p">
+        <div class="col-xl-4 bg-light fs-14 px-30p py-60p d-none d-xl-block">
           <div class="h5">Бесплатная доставка</div>
           <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
           <img class="img-fluid d-block mx-auto" src="//liberta.ua/img/delivery-free-delivery.png" alt="">
@@ -190,11 +209,11 @@
   <div class="container">
     <form>
       <div class="form-group mb-0 form-row align-items-center justify-content-center">
-        <label for="subscribe" class="col-auto mb-0">Советы по стилю, новинки и распродажи. Подпишись:</label>
-        <div class="col-auto">
+        <label for="subscribe" class="col-lg-auto mb-lg-0 text-center">Советы по стилю, новинки и распродажи. Подпишись:</label>
+        <div class="col-sm-auto mb-2 mb-sm-0">
           <input type="email" class="subscribe__form-control form-control" id="subscribe" placeholder="Ваша эл. почта" required="">
         </div>
-        <div class="col-auto">
+        <div class="col-sm-auto text-center">
           <button class="subscribe__btn btn btn-secondary">Подписаться</button>
         </div>
       </div>
@@ -204,52 +223,54 @@
 
 <footer class="footer">
   <div class="container">
-    <div class="row no-gutters align-items-start d-none d-xl-flex">
-      <div class="col-3 footer__col">
-        <div class="footer__menu-title">Интернет-магазин</div>
-        <ul class="footer__menu list-unstyled mb-0">
-          <li><a href="/about-us">О компании</a></li>
-          <li><a href="/blog">Блог</a></li>
-          <li><a href="/showrooms">Адреса шоу-румов</a></li>
-        </ul>
-      </div>
-      <div class="col-3 footer__col">
-        <div class="footer__menu-title">Каталог товаров</div>
-        <ul class="footer__menu list-unstyled mb-0">
-          <li><a href="/mirrors">Зеркала</a></li>
-          <li><a href="/showers-cabins">Душевые</a></li>
-          <li><a href="/doors">Межкомнатные двери</a></li>
-          <li><a href="/sliding">Раздвижные системы</a></li>
-        </ul>
-      </div>
-      <div class="col-3 footer__col">
-        <div class="footer__menu-title">Информация для покупателей</div>
-        <ul class="footer__menu list-unstyled mb-0">
-          <li><a href="/service-center">Сервисный центр</a></li>
-          <li><a href="/payment-and-delivery">Доставка и оплата</a></li>
-          <li><a href="/garranty-and-return">Гарантия и возврат</a></li>
-        </ul>
-      </div>
-      <div class="col-3 footer__col footer__col--contacts">
-        <div class="footer__menu-title">Есть вопросы?</div>
-        <ul class="footer__phones list-unstyled">
-          <li><a href="tel:+380673265980">+38(067) 326-59-80</a></li>
-          <li><a href="tel:+380501005980">+38(050) 100-59-80</a></li>
-          <li><a href="tel:+380931701347">+38(093) 170-13-47</a></li>
-        </ul>
-        <ul class="footer__menu list-unstyled mb-0">
-          <li><a href="mailto:info@liberta.com.ua">info@liberta.com.ua</a></li>
-          <li><a href="/contacts">Контактная информация</a></li>
-          <li><a href="/mission">Социальная миссия</a></li>
-        </ul>
+    <div class="footer__top d-none d-xl-block">
+      <div class="row no-gutters align-items-start">
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Интернет-магазин</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/about-us">О компании</a></li>
+            <li><a href="/blog">Блог</a></li>
+            <li><a href="/showrooms">Адреса шоу-румов</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Каталог товаров</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/mirrors">Зеркала</a></li>
+            <li><a href="/showers-cabins">Душевые</a></li>
+            <li><a href="/doors">Межкомнатные двери</a></li>
+            <li><a href="/sliding">Раздвижные системы</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Информация для покупателей</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/service-center">Сервисный центр</a></li>
+            <li><a href="/payment-and-delivery">Доставка и оплата</a></li>
+            <li><a href="/garranty-and-return">Гарантия и возврат</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col footer__col--contacts">
+          <div class="footer__menu-title">Есть вопросы?</div>
+          <ul class="footer__phones list-unstyled">
+            <li><a href="tel:+380673265980">+38(067) 326-59-80</a></li>
+            <li><a href="tel:+380501005980">+38(050) 100-59-80</a></li>
+            <li><a href="tel:+380931701347">+38(093) 170-13-47</a></li>
+          </ul>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="mailto:info@liberta.com.ua">info@liberta.com.ua</a></li>
+            <li><a href="/contacts">Контактная информация</a></li>
+            <li><a href="/mission">Социальная миссия</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="footer__bottom">
       <div class="row align-items-center">
-        <div class="col-4">
+        <div class="col-md-4 text-center text-md-left mb-3 mb-md-0">
           <p class="text-muted mb-0">© 2020 Интернет-магазин Liberta</p>
         </div>
-        <div class="col-4">
+        <div class="col-md-4 mb-3 mb-md-0">
           <ul class="footer__social list-unstyled mb-0">
             <li>
               <a href="https://www.facebook.com/Liberta.LED" target="_blank">
@@ -274,7 +295,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-4 text-right">
+        <div class="col-md-4 text-center text-md-right">
           <p class="text-muted mb-0">Создание дизайна - <a rel="nofollow" target="_blank" href="http://www.fresh-d.net/">Fresh Agency</a></p>
         </div>
       </div>
