--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <a href="dnepr.html" class="list-group-item list-group-item-action">Шоурум в городе</a>
       <a href="mirrors-smart.html" class="list-group-item list-group-item-action">Лендинг зеркал смарт</a>
       <a href="mirrors.html" class="list-group-item list-group-item-action">Категория товара</a>
+      <a href="mirrors-royal.html" class="list-group-item list-group-item-action">Категория товара Royal</a>
     </div>
   </div>
 
