--- a/mirrors-royal.html
+++ b/mirrors-royal.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Зеркала купить в Украине - заказать зеркала Liberta</title>
-  <meta name="description" content="Зеркала LIberta. Купить зеркало Liberta в Украине. Широкий выбор дополнительных опций: подогрев, подсветка, линза, часы. ✔Доступные цены.  ✔ Бесплатная доставка по всей Украине. ✔ Гарантия 24 месяца.">
+  <title>Зеркало Royal купить в Украине - интернет-магазин Liberta</title>
+  <meta name="description" content="Купить зеркало Royal под заказ в интернет-магазине зеркал от производителя Liberta. ✔ Бесплатная доставка по всей Украине. ✔ Гарантия 24 месяца. ✔ Широкий выбор.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -328,23 +328,53 @@
   </header>
 
   <main>
-    <div class="pt-20p pt-xl-0">
-      <div class="container">
-        <nav aria-label="breadcrumb" class="d-none d-xl-block">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Главная</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Зеркала LIBERTA</li>
-          </ol>
-        </nav>
-        <div class="row align-items-center">
-          <div class="col-xl-8 col-md-7 mb-3">
-            <h1 class="mb-0">Зеркала LIBERTA</h1>
+    <div class="bg-black text-white">
+      <div class="category-banner category-banner--royal pt-20p pt-xl-0">
+        <div class="container">
+          <nav aria-label="breadcrumb" class="d-none d-xl-block">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="/">Главная</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Зеркала Royal</li>
+            </ol>
+          </nav>
+          <div class="row align-items-center">
+            <div class="col-xl-8 col-md-7 mb-3">
+              <h1 class="mb-0">Зеркала Royal</h1>
+            </div>
           </div>
-          <div class="col-xl-4 col-md-5 mb-3">
-            <a href="kak-vybrat-zerkalo" class="suggest-post d-flex align-items-center font-weight-500">
-              <img class="img-fluid mr-3" src="//liberta.ua/img/svg/owl.svg" width="60" alt="Как выбрать зеркало">
-              <span>Как выбрать зеркало</span>
-            </a>
+          <div class="category-banner__advantages mt-auto d-none d-md-block">
+            <div class="row">
+              <div class="col-auto">
+                <div class="row row-16 align-items-center">
+                  <div class="col-auto">
+                    <img class="category-banner__advantages-icon" src="//liberta.ua/img/x3d-pattern.png.pagespeed.ic.9Y6LgDGHJb.png" alt="">
+                  </div>
+                  <div class="col-auto">
+                    Объемный 3D узор
+                  </div>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="row row-16 align-items-center">
+                  <div class="col-auto">
+                    <img class="category-banner__advantages-icon" src="//liberta.ua/img/xpaint.png.pagespeed.ic.R6rqvSEb6b.png" alt="">
+                  </div>
+                  <div class="col-auto">
+                    Патинирование
+                  </div>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="row row-16 align-items-center">
+                  <div class="col-auto">
+                    <img class="category-banner__advantages-icon" src="//liberta.ua/img/xillumination.png.pagespeed.ic.VLHIvff496.png" alt="">
+                  </div>
+                  <div class="col-auto">
+                    Уникальная технология
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -667,7 +697,7 @@
 
         <div class="row row-16 mb-n3 mt-30p">
           <div class="col-md-4 col-xl-3 mb-3">
-            <div class="product-card">
+            <div class="product-card product-card--dark">
               <div class="product-card__info">
                 <img class="product-card__label" src="//liberta.ua/img/svg/in-stock.svg" alt="" height="28">
                 <div class="product-card__img-wrap">
@@ -708,7 +738,7 @@
             </div>
           </div>
           <div class="col-md-4 col-xl-3 mb-3">
-            <div class="product-card product-card--media">
+            <div class="product-card product-card--media product-card--dark">
               <div class="product-card__info">
                 <div class="product-card__img-wrap">
                   <div class="product-card__media-left">
@@ -799,7 +829,7 @@
             </div>
           </div>
           <div class="col-md-4 col-xl-3 mb-3">
-            <div class="product-card">
+            <div class="product-card product-card--dark">
               <div class="product-card__info">
                 <div class="product-card__img-wrap">
                   <img class="product-card__img" src="//liberta.ua/uploads/imageCategoryProduct/xG4_1583826344.png.pagespeed.ic.26r7m5SgOv.png" alt="CORE Grey">
@@ -838,56 +868,14 @@
     <div class="bg-light py-50p">
       <div class="container">
         <div class="seo-txt lh-wide collapsed">
-          <p>Liberta – элитные напольные и настенные зеркала на заказ, которые производятся в точном соответствии с вашими пожеланиями. Зеркальное полотно премиум-класса гарантирует невероятно чистое отражение без искажений, а большой выбор дополнительных аксессуаров делает наши модели практичными и удобными. Лучшие современные материалы, инновационные технологии и эксклюзивное оформление – отличительные качества наших изделий, которые мы производим на европейском оборудовании с использованием комплектующих премиум-класса. При изготовлении под заказ мы не берем доплаты за нестандартный дизайн и комплектацию, указанная цена фиксирована. При заказе на сайте магазина вы можете купить свое идеальное зеркало:
-          </p>
-          <ol>
-            <li><a href="https://liberta.ua/mirrors-withillumination">С подсветкой</a> или без – доступны два типа освещения: декоративное, направленное на стену и подчеркивающее ее фактуру, либо фронтальное, подсвечивающее лицо смотрящего.</li>
-            <li>С рамой или без – оригинальные рамы из современных материалов либо лаконичные зеркала с фацетной обработкой кромки. Фацет облегчает дизайн изделия, делает его элегантнее и дороже.</li>
-            <li>Овальной, прямоугольной, круглой или квадратной формы и любого размера, включая нестандартные варианты.</li>
-            <li>Настенные или напольные – последние позволяют увидеть изображение в полный рост.</li>
-          </ol>
-          <p>Любое зеркало Liberta – настоящее украшение, создающее новый образ вашего дома, преображающее интерьер, подчеркивающее его достоинства и скрывающее недостатки. Индивидуальный дизайн наших изделий позволит подобрать зеркало к оформлению помещения так, чтобы визуально расширить пространство, сделать комнату светлее, просторнее, уютнее.
-          </p>
-          <h2>Форма зеркал</h2>
-          <p>Зеркала Liberta подойдут к интерьеру, конфигурации и площади любого помещения – ведь вы можете выбрать нужный размер и форму изделия. Зеркальное полотно изготавливается в четырех вариантах: круглое, овальное, квадратное и прямоугольное. Оно может быть направлено горизонтально или вертикально. Для каждой модели доступны несколько стандартных размеров, также вы можете указать любые индивидуальные параметры ширины и высоты, получив изделие с уникальными пропорциями.
-          </p>
-          <h2>Качество зеркального полотна</h2>
-          <p>Мы используем современное зеркальное полотно MIROX 3G. Оно произведено в Европе и обладает отражающими свойствами премиум-класса с гарантией чистоты изображения. Его толщина всего 4 мм, поэтому зеркала Liberta максимально тонкие и легкие, идеально вписываются даже в помещения небольшой площади, великолепно выглядят на стене из любых материалов. Зеркальная поверхность не подвержена коррозии, отражающая амальгама содержит чистое серебро, препятствующее росту бактерий и грибков. Зеркало Liberta станет вашей семейной реликвией – его срок службы исчисляется десятилетиями, в том числе при использовании в условиях повышенной влажности.
-          </p>
-          <h2>Корпус и рама</h2>
-          <p>Корпус производства немецкого концерна SIMONA изготовлен из ПВХ – этот современный материал устойчив к действию влаги, не деформируется в процессе эксплуатации, не наносит вреда окружающей среде, обеспечивает полную защиту электронных компонентов от попадания воды и влаги. Он легче, экологичнее и качественнее, чем ДСП, используемый для изготовления обычных зеркал. Зеркальное полотно не соприкасается со стеной или влажными поверхностями, что обеспечивает высокую электробезопасность продукта.
-          </p>
-          <p>Инновационные технологии производства позволяют создавать зеркала с уникальным дизайном – элементы корпуса и крепления полностью скрыты за полотном. Визуально кажется, что зеркало парит около стены, фацетная обработка кромки хорошо видна, что придает вашему зеркалу больше бриллиантового блеска.
-          </p>
-          <p>Для оформления зеркального полотна используются рамы из багета или алюминия, последние могут сочетаться с изящным фацетом. Безрамные зеркала могут быть оформлены еврокромкой или фацетной обработкой в 5 либо 20 мм, придающей им объем и визуальную законченность. Изделия без рамы смотрятся лаконично и дорого, обработка кромки сглаживает переход между полотном и стеной. Для производства используется только оригинальная корейская фурнитура ESTAR высокого качества.
-          </p>
-          <p>Легкие и технологичные зеркала Liberta – лучшее решение для современного интерьера, где каждая деталь должна быть доведена до совершенства.
-          </p>
-          <h2>Подсветка</h2>
-          <p>Практически к любой модели можно подобрать подходящий вариант светодиодной подсветки: декоративное освещение, акцентирующее внимание на зеркале как элементе интерьера, либо фронтальный свет, направленный на лицо смотрящего. Доступно сочетание двух видов освещения в одном зеркале.
-          </p>
-          <p>Светодиодные лампы создают необычный визуальный эффект, подчеркивают фактуру стен и форму зеркального полотна, оживляют интерьер и делают помещение светлее. Особенно красиво зеркало с подсветкой смотрится на стене светлых оттенков. Направленное освещение лица позволяет с удобством наносить макияж или бриться. Технологичные LED-лампы, используемые в зеркалах Liberta, служат более 50 тыс. часов, размещаются в защитном коробе, куда не попадает вода и пыль. На заказ предлагаем четыре цвета освещения: холодный, теплый и нейтральный белый, а также разноцветный.
-          </p>
-          <h2>Дополнительные опции</h2>
-          <p>При заказе вы можете выбрать дополнительные аксессуары и функции, которыми будет оснащено ваше зеркало:
-          </p>
-          <ul class="list-unstyled">
-            <li><img class="mr-2" src="//liberta.ua/uploads/redactor/category/5bb7340d86b45.png">полочки для хранения мелочей из матового или прозрачного стекла;</li>
-            <li><img class="mr-2" src="//liberta.ua/uploads/redactor/category/5bb734175de3c.png">обогрев поверхности, предохраняющий от запотевания и обеспечивающий качество изображения в помещениях с высокой влажностью;</li>
-            <li><img class="mr-2" src="//liberta.ua/uploads/redactor/category/5bb7342890797.png">косметическая линза, увеличивающая изображение лица в 5 раз, может быть дополнена направленной подсветкой;</li>
-            <li><img class="mr-2" src="//liberta.ua/uploads/redactor/category/5bb7342f4af15.png">часы высокой степени точности с влагостойким механизмом, интегрированные в зеркальную поверхность.</li>
+          <h2>Описание зеркал серии "Royal"</h2>
+          <p>Все зеркала ТМ Liberta обладают безупречным качеством и дизайном. Но серия ROYAL отличается особенной элегантностью. Одного взгляда на эти настенные зеркала достаточно, чтобы без слов понять их благородное происхождение. Каждый блик и каждая линия гравировки демонстрируют изысканность. Кстати, несколько слов о гравировке. Зеркала серии Liberta ROYAL украшены с использованием трех разных технологий, в том числе эксклюзивного для Украины приема “бушарде”.</p>
+          <ul>
+            <li>3D гравировка создает абсолютно реалистично изображение объемных, уходящих в глубину зеркального полотна, узоров. Но на самом деле поверхность зеркала остается безупречно гладкой. </li>
+            <li>Лазерная гравировка используется для создания рельефных, сверкающих, высокоточных линий. Если бы космические технологии стали на службу вашему зеркалу — это выглядело бы так.</li>
+            <li>Гравировка в технике “бушарде” никогда не повторяется, даже если захотеть. Объемно изображение наносится при помощи микроскопических зеркальных взрывов, создает стихийные грани и отражает свет бриллиантовыми переливами.</li>
           </ul>
-          <p>Крепления зеркала позволяют установить его без использования специализированного оборудования, монтаж простой и не займет много времени. После установки положение регулируется по горизонтали до 15 мм.
-          </p>
-          <h2>Доставка, гарантия и ремонт</h2>
-          <p>Бесплатно доставим ваш заказ по всей Украине: по Днепру – курьером, в другие города – Службой доставки адресно при 100% оплате заказа и в отделение при 50% оплате заказа. Упаковка зеркала надежно предохраняет его от повреждений: она изготовлена из плотного гофрокартона, дополнительно товар упакован в пенопласт, для предупреждения сколов кромки используются специальные защитные уголки.
-          </p>
-          <p>Ваш заказ будет готов через 7 рабочих дней при производстве зеркал по индивидуальным размерам. С дополнительными аксессуарами и нестандартными функциями срок производства увеличивается на 2-3 рабочих дня.
-          </p>
-          <p>Уникальное предложение от Liberta: гарантия 24 месяца на все товары с момента оплаты заказа, сервисное обслуживание на протяжении всего срока эксплуатации продукта.
-          </p>
-          <p>Вы можете купить зеркало на сайте нашего магазина, оформив заказ с указанием необходимых параметров. Не нашли нужного варианта? Заполните форму связи, наш менеджер перезвонит вам через 15 минут.
-          </p>
+          <p>Зеркала серии Liberta ROYAL могут быть дополнены патиной — обратите внимание на эти сдержанные серебристые и золотистые оттенки металла. Кроме того, доступны дополнительные опции: подсветка на стену, стеклянная полочка. Благодаря этим возможностям зеркала ROYAL круглой, овальной, прямоугольной, квадратной формы безупречно дополняют роскошные интерьеры гостиных, спален, прихожих и ванных комнат.</p>
         </div>
         <div class="seo-txt__controls mt-4">
           <button type="button" class="seo-txt__expand btn-unstyled text-link">Читать полностью</button>
